force-app/main/default/objects/Platform_ID__c/Platform_ID__c.object-meta.xml
<CustomObject>
    <description>Defines Adform Platform ID type and actual number. For billing usage data identification.</description>
    <label>Platform ID</label>
    <nameField>
        <displayFormat>PI-{0000000}</displayFormat>
        <label>Platform ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>