force-app/main/default/objects/Platform_ID__c/fields/Billing_Title__c.field-meta.xml
<CustomField>
    <fullName>Billing_Title__c</fullName>
    <externalId>true</externalId>
    <label>Billing Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>