force-app/main/default/objects/Platform_ID__c/fields/End_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>End_Client_ID__c</fullName>
    <label>End Client ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>