force-app/main/default/objects/Platform_ID__c/fields/Inventory_ID__c.field-meta.xml
<CustomField>
    <fullName>Inventory_ID__c</fullName>
    <label>Inventory ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>