force-app/main/default/objects/Platform_ID__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;&amp;Id, 
CASE(RecordType.DeveloperName, &#39;Sell_Side_ID&#39;,  TEXT(Account_ID__c), &#39;DMP_ID&#39;,  TEXT(Account_ID__c), &#39;Account_ID&#39;,  TEXT(Account_ID__c) , &#39;End_Client_ID&#39;,  TEXT(End_Client_ID__c) ,&#39;User_Group_ID&#39;,  TEXT(User_Group_ID__c) ,&#39;Inventory_ID&#39;,   Inventory_ID__c, Name) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record ID</label>
    <type>Text</type>
</CustomField>