force-app/main/default/objects/Platform_ID__c/fields/Record_Id_For_Update__c.field-meta.xml
<CustomField>
    <fullName>Record_Id_For_Update__c</fullName>
    <externalId>true</externalId>
    <label>Record Id(For Update)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>