force-app/main/default/objects/Platform_ID__c/fields/User_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Group_ID__c</fullName>
    <label>User Group ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>