force-app/main/default/objects/Platform_ID__c/recordTypes/Account_ID.recordType-meta.xml
<RecordType>
    <fullName>Account_ID</fullName>
    <active>true</active>
    <label>TPAS/DSP ID</label>
</RecordType>