force-app/main/default/objects/Platform_ID__c/recordTypes/DMP_ID.recordType-meta.xml
<RecordType>
    <fullName>DMP_ID</fullName>
    <active>true</active>
    <label>DMP ID</label>
</RecordType>