force-app/main/default/objects/Platform_ID__c/recordTypes/End_Client_ID.recordType-meta.xml
<RecordType>
    <fullName>End_Client_ID</fullName>
    <active>true</active>
    <label>End Client ID</label>
</RecordType>