force-app/main/default/objects/Platform_ID__c/recordTypes/Inventory_ID.recordType-meta.xml
<RecordType>
    <fullName>Inventory_ID</fullName>
    <active>true</active>
    <label>Inventory ID</label>
</RecordType>