force-app/main/default/objects/Platform_ID__c/recordTypes/Sell_Side_ID.recordType-meta.xml
<RecordType>
    <fullName>Sell_Side_ID</fullName>
    <active>true</active>
    <label>Sell-Side ID</label>
</RecordType>