force-app/main/default/objects/Platform_ID__c/recordTypes/User_Group_ID.recordType-meta.xml
<RecordType>
    <fullName>User_Group_ID</fullName>
    <active>false</active>
    <label>User Group ID</label>
</RecordType>